manifetsts/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: playk8s-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: playk8s-service
          servicePort: 80
